# tickr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN_category_dropdown.md  PROJECT_ANALYSE.md  README.md  TODO-backend.md  TODO-frontend.md  TODO.md  docker-compose.yml  entrypoint.sh  index-html-split-plan.md  main.py  pyproject.toml  tickr-auth-plan.md  tickr.code-workspace  tickr.env.example  todo.code-workspace
.github/workflows/: ci.yml  docker.yml
backend/: __init__.py  auth.py  backup.py  config.py  constants.py  database.py  errors.py  events.py  history.py  logging_config.py  main.py  metrics.py  models.py  purge.py
backend/routes/: __init__.py  auth.py  categories.py  errors.py  history.py  items.py  lists.py  monitoring.py  settings.py  sse.py  static.py  sync.py
docs/: code-style.md
frontend/: .stylelintrc.json  eslint.config.js  html-include.js  html-include.test.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/partials/: history-panel.html  main.html  modal-edit-item.html  modal-edit-list.html  modal-metrics.html  modal-new-list.html  modal-settings.html  sidebar.html  toasts.html
frontend/public/: circuit-breaker.js  manifest.json  sw.js
frontend/src/: add-item-autocomplete.js  app.js  auth.js  bus.js  category-tag.js  category-tag.test.js  data.js  data.test.js  dom.js  dropdown.js  error-reporting.js  events.js  history-model.js  history-model.test.js  html-include.test.js  icons.js  icons.test.js  main.js  metrics.js  render.js  state.js  storage.js  storage.test.js  style.css  sync-status.js  sync-status.test.js  timing.js  toast.js
frontend/src/data/: category-draft.js  crud.js  crud.test.js  sorting.js  subscriptions.js
frontend/src/db/: constants.js  (+4 more)
static/: manifest.json  sw.js
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_auth.py  test_auth_middleware.py  test_categories.py  test_constants_sync.py  test_errors.py  test_events.py  test_history.py  test_items.py  test_lists.py  test_metrics.py  test_middleware.py  test_monitoring.py  test_proxy_trust.py  test_purge.py  test_settings.py  test_static.py  test_sync.py  test_sync_auth.py  test_sync_collections.py  test_validation.py
(+28 files in other folders)
